examples/invalid/unsed_var.reqlang
vars = ["base_url"]
secrets = []

[envs]

[prompts]
---
GET / HTTP/1.1
---
HTTP/1.1 200 OK

---
